--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,7 @@ jobs:
       - name: Setup DVC
         uses: iterative/setup-dvc@v1
       - name: Pull data from DVC
-        run: |
-          dvc remote add -d s3remote S3://udacityc3
-          dvc pull 
+        run: dvc pull
       - name: Run Flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
