--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Pull data from DVC
         run: |
           dvc remote add -d s3remote S3://udacityc3
-          dvc pull
+          dvc pull data -R
       - name: Run Flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
