--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,7 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Run pytest
-        run: pytest src/model_test.py -vv
+        run: |
+          pytest src/model_test.py -vv
+          pytest api_test.py -vv
+
