--- a/.github/workflows/wandb-exercise.yaml
+++ b/.github/workflows/wandb-exercise.yaml
@@ -74,11 +74,11 @@ jobs:
     - name: Generate a comparison report
       if: steps.runid-value.outputs.VAL_FOUND == 'true'
       id: report
-      run: python ./client/compare_runs.py
+      run: python ./compare_runs.py
       env:
-        WANDB_ENTITY: fgul
-        WANDB_PROJECT: udacity_exercise
-        BASELINE_TAG: baseline
+        WANDB_ENTITY: frkangul
+        WANDB_PROJECT: foreground-car-segm
+        BASELINE_TAG: qh34o17b
         RUN_ID: "${{ steps.runid-value.outputs.RUN_ID }}"
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
 
